src/objects/Shopping_List_Item__c.object
<CustomObject>
    <fields>
        <fullName>Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Done?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grocery_Item__c</fullName>
        <label>Grocery Item</label>
        <referenceTo>Grocery_Item__c</referenceTo>
        <relationshipLabel>Shopping List Items</relationshipLabel>
        <relationshipName>Shopping_List_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shopping_List__c</fullName>
        <label>Shopping List</label>
        <referenceTo>Shopping_List__c</referenceTo>
        <relationshipLabel>Shopping List Items</relationshipLabel>
        <relationshipName>Shopping_List_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Shopping List Item</label>
    <nameField>
        <displayFormat>SLI-{0000}</displayFormat>
        <label>Shopping List Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shopping List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>